--- a/index.html
+++ b/index.html
@@ -5,10 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BD NEWS PORTAL</title>
+    <!-- CSS LINK  -->
+    <link rel="stylesheet" href="style/styles.css">
+    <!-- font awesome cdn  -->
+    <script src="https://kit.fontawesome.com/7b30f6a44b.js" crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP LINK  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body id="body">
     <header>
-        
+        <div class="container">
+            <nav class="navbar navbar-expand-lg mt-2 navbar-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"> <span class="class-title">BD NEWS</span> <span
+                            class="nav-title">PORTAL</span> </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+                        <div class="d-md-flex align-items-center">
+                            <a href="" class="header-news">News</a>
+                            <a href="" class="header-blogs">Blogs</a>
+                            <img src="image/Avatar.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <div class="">
+                <hr class="nav-section">
+                <ul class="nav justify-content-between d-block d-md-flex">
+                    <li class="nav-item">
+                        <a onclick="loadNews('01')" class="nav-link active" aria-current="page" href="#">Breaking news
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a onclick="loadNews('02')" class="nav-link" href="#">Regular news</a>
+                    </li>
+                    <li class="nav-item">
+                        <a onclick="loadNews('03')" class="nav-link" href="#">International news</a>
+                    </li>
+                    <li class="nav-item">
+                        <a onclick="loadNews('04')" class="nav-link" href="#">Sports</a>
+                    </li>
+                    <li class="nav-item">
+                        <a onclick="loadNews('05')" class="nav-link" href="#">Entertainment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a onclick="loadNews('06')" class="nav-link" href="#">Culture</a>
+                    </li>
+                    <li class="nav-item">
+                        <a onclick="loadNews('07')" class="nav-link" href="#">Arts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a onclick="loadNews('08')" class="nav-link" href="#">All news</a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
     </header>
+    <main class="container">
+        <section>
+            <div class="bg-white my-2 rounded-3 ">
+                <p class="px-3 py-3"> <span id="news-length">0</span> Items found for category Entertainment</p>
+            </div>
+        </section>
+        <section>
+            <div class="d-none d-md-flex justify-content-between mb-4">
+                <div class=" mb-3 d-inline align-items-center">
+                    <label class="me-2" for="inputGroupSelect01">Sort By View:</label>
+                    <select class="py-1 px-3 rounded-3 border-0" id="inputGroupSelect01">
+                        <option selected>Default</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+                <div>
+                    <button class=" btn btn-primary me-2">Today's Pick</button>
+                    <button class="btn btn-outline-primary ">Trending</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="container mb-5">
+            <div id="news-container" class="row row-cols-1 g-3">
+
+            </div>
+            <div id="no-found-news" class="mt-4 d-none">
+                <h3 class="text-primary">No News Found.</h3>
+            </div>
+        </section>
+        <!-- loader  -->
+        <section id="loader" class="d-none">
+            <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="bg-white py-3 pt-4 text-center">
+        <p class="text-muted">Copyright 2022 BD NEWS PORTAL</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
