--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="">
+            <div>
                 <hr class="nav-section">
                 <ul class="nav justify-content-between d-block d-md-flex">
                     <li class="nav-item">
@@ -64,7 +64,6 @@
                     </li>
                 </ul>
             </div>
-
         </div>
     </header>
     <main class="container">
