--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                     </button>
                     <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
                         <div class="d-md-flex align-items-center">
-                            <a href="" class="header-news">News</a>
+                            <a href="index.html" class="header-news">News</a>
                             <a href="" class="header-blogs">Blogs</a>
                             <img src="image/Avatar.png" alt="">
                         </div>
