--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
                         <div class="d-md-flex align-items-center">
                             <a href="" class="header-news">News</a>
-                            <a href="" class="header-blogs">Blogs</a>
+                            <a id="blog" href="blog.html" class="header-blogs">Blogs</a>
                             <img src="image/Avatar.png" alt="">
                         </div>
                     </div>
