--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
         </div>
     </header>
     <main>
-        <section class="container mb-5">
+        <section class="container mt-5 mb-5">
             <div class="row justify-content-center">
                 <div class="col-md-11 mb-4">
                     <div class="text-center mx-lg-5 px-md-5 ">
@@ -135,7 +135,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="accordion-item">
+                        <div class="accordion-item mb-3">
                             <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button collapsed text-capitalize fw-bold" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
