--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
 </head>
 <body id="body">
     <header>
+        <!-- nav section start here  -->
         <div class="container">
             <nav class="navbar navbar-expand-lg mt-2 navbar-light">
                 <div class="container-fluid">
@@ -35,8 +36,11 @@
                 </div>
             </nav>
         </div>
+        <!-- nav section start here  -->
     </header>
+
     <main>
+        <!-- question Answer section start here  -->
         <section class="container mt-5 mb-5">
             <div class="row justify-content-center">
                 <div class="col-md-11 mb-4">
@@ -158,10 +162,13 @@
                 </div>
             </div>
         </section>
+        <!-- question Answer section end here  -->
     </main>
+    <!-- footer section start here  -->
     <footer class="bg-white py-3 pt-4 text-center">
         <p class="text-muted">Copyright 2022 BD NEWS PORTAL</p>
     </footer>
+    <!-- footer section end here  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
