--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body id="body">
     <header>
+        <!-- nav section star here  -->
         <div class="container">
             <nav class="navbar navbar-expand-lg mt-2 navbar-light">
                 <div class="container-fluid">
@@ -65,7 +66,9 @@
                 </ul>
             </div>
         </div>
+        <!-- nav section star here  -->
     </header>
+
     <main class="container">
         <section>
             <div class="bg-white my-2 rounded-3 ">
@@ -89,7 +92,7 @@
                 </div>
             </div>
         </section>
-
+        <!-- card section start here  -->
         <section class="container mb-5">
             <div id="news-container" class="row row-cols-1 g-3">
 
@@ -98,6 +101,7 @@
                 <h3 class="text-primary">No News Found.</h3>
             </div>
         </section>
+        <!-- card section end here  -->
         <!-- loader  -->
         <section id="loader" class="d-none">
             <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
@@ -131,9 +135,11 @@
             </div>
         </section>
     </main>
+    <!-- footer section start here  -->
     <footer class="bg-white py-3 pt-4 text-center">
         <p class="text-muted">Copyright 2022 BD NEWS PORTAL</p>
     </footer>
+    <!-- footer section start here  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
